--- a/app/dev/module/main/update-profile-signup.html
+++ b/app/dev/module/main/update-profile-signup.html
@@ -24,243 +24,9 @@
                     </div>
 
                     <div class="lv-body" style="padding: 20px;">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <form id="profile" name="profile">
-
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-3">
-                                                <p>Fullname</p>
-
-                                            </div>
-                                            <div class="col-sm-2" ng-if="mainCtrl.user.is_pastor">
-                                                <div class="form-group">
-                                                    <div class="fg-line">
-                                                        <div class="select">
-                                                            <select class="form-control" ng-model="mainCtrl.user.title">
-                                                                <option value="Archbishop">Archbishop</option>
-                                                                <option value="Apostle">Apostle</option>
-                                                                <option value="Bishop">Bishop</option>
-                                                                <option value="Deacon">Deacon</option>
-                                                                <option value="Elder">Elder</option>
-                                                                <option value="Priest">Priest</option>
-                                                                <option value="Reverend">Reverend</option>
-                                                                <option value="Pastor" selected>Pastor</option>
-
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-3">
-                                                <div class="form-group">
-                                                    <div class="fg-line">
-                                                        <input type="text" ng-model="mainCtrl.user.first_name"
-                                                               class="form-control" placeholder="first name">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-3">
-                                                <div class="form-group">
-                                                    <div class="fg-line">
-                                                        <input type="text" ng-model="mainCtrl.user.last_name"
-                                                               class="form-control" placeholder="last name">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row m-b-20">
-                                            <div class="col-sm-3">
-                                                <p>Select your church</p>
-                                            </div>
-                                            <div class="col-sm-8">
-                                                <input type="text"
-                                                       ng-model="mainCtrl.user.church"
-                                                       placeholder="Type the name of your church"
-                                                       uib-typeahead="c as c.name + ' (' +  c.city + ')' for c in  mainCtrl.getChurch($viewValue)"
-                                                       typeahead-loading="loadingChurches"
-                                                       typeahead-no-results="noResults" class="form-control f-16">
-                                                <i ng-show="loadingChurches" class="glyphicon glyphicon-refresh"></i>
-
-                                                <div ng-show="noResults" class="f-14 c-red">
-                                                    <i class="glyphicon glyphicon-remove"></i> No church found,
-                                                    click <a href ng-click="newChurch=true;">here</a> to add church</a>
-
-                                                    <div ng-if="newChurch" id="new-church" class="m-t-15">
-                                                        <form name="churchForm" id="churchForm">
-                                                            <div class="row">
-                                                                <div class="col-sm-8">
-                                                                    <md-input-container class="md-block">
-                                                                        <label>Church name</label>
-                                                                        <input required
-                                                                               name="churchname"
-                                                                               ng-model="mainCtrl.newChurch.name">
-
-                                                                        <div ng-if="mainCtrl.newChurch.name.length < 1"
-                                                                             ng-messages="churchForm.churchname.$error">
-                                                                            <div ng-message="required">This is
-                                                                                required.
-                                                                            </div>
-                                                                        </div>
-                                                                    </md-input-container>
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-sm-8">
-                                                                    <div class="form-group">
-                                                                        <input type="text"
-                                                                               class="form-control input-sm"
-                                                                               ng-model="mainCtrl.newChurch.website"
-                                                                               placeholder="Website">
-
-                                                                    </div>
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-sm-8">
-                                                                    <div class="form-group">
-                                                                        <input type="text"
-                                                                               name="city"
-                                                                               class="form-control input-sm"
-                                                                               ng-model="mainCtrl.newChurch.city"
-                                                                               placeholder="City">
-
-                                                                    </div>
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-sm-8">
-                                                                    <div class="form-group">
-                                                                        <input type="text"
-                                                                               name="state"
-                                                                               class="form-control input-sm"
-                                                                               ng-model="mainCtrl.newChurch.state"
-                                                                               placeholder="State">
-
-
-                                                                    </div>
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-sm-8">
-                                                                    <div class="form-group">
-                                                                        <input type="text"
-                                                                               name="country"
-                                                                               class="form-control input-sm"
-                                                                               ng-model="mainCtrl.newChurch.country"
-                                                                               placeholder="Country">
-
-                                                                    </div>
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-sm-8">
-                                                                    <div class="form-group">
-                                                                        <md-button
-                                                                                ng-click="mainCtrl.addChurch(churchForm)"
-                                                                                class="md-raised c-white bgm-lightblue">
-                                                                            Add Church
-                                                                        </md-button>
-                                                                        <md-button type="button" class="md-raised">
-                                                                            Close
-                                                                        </md-button>
-                                                                    </div>
-
-                                                                </div>
-                                                            </div>
-                                                        </form>
-
-
-                                                    </div>
-                                                </div>
-                                                <!--<select chosen-->
-                                                <!--data-placeholder="Select your church..."-->
-                                                <!--ng-model="selected"-->
-                                                <!--ng-options="c as c.name + ' (' +  c.city + ')' for c in mainCtrl.churches"-->
-                                                <!--class="w-100 localytics-chosen">-->
-                                                <!--<option value=""></option>-->
-                                                <!--</select>-->
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-3">
-                                                <p>Are you a church leader (e.g Pastor)?</p>
-
-                                            </div>
-                                            <div class="col-sm-8">
-                                                <label class="radio radio-inline m-r-20">
-                                                    <input type="radio" ng-model="mainCtrl.user.is_pastor"
-                                                           name="isPastor" data-ng-value="true">
-                                                    <i class="input-helper"></i>
-                                                    Yes
-                                                </label>
-                                                <label style="margin-left: 0px" class="radio radio-inline m-r-20">
-                                                    <input type="radio"
-                                                           ng-model="mainCtrl.user.is_pastor"
-                                                           name="isPastor" data-ng-value="false">
-                                                    <i class="input-helper"></i>
-                                                    No
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-3">
-                                                <p>Gender</p>
-                                            </div>
-                                            <div class="col-sm-8">
-                                                <label class="radio radio-inline m-r-20">
-                                                    <input type="radio"
-                                                           ng-model="mainCtrl.user.gender"
-                                                           name="gender" value="m">
-                                                    <i class="input-helper"></i>
-                                                    Male
-                                                </label>
-                                                <label class="radio radio-inline m-r-20">
-
-                                                    <input type="radio"
-                                                           ng-model="mainCtrl.user.gender"
-                                                           name="gender" value="f">
-                                                    <i class="input-helper"></i>
-                                                    Female
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group m-t-20">
-                                        <div class="row">
-                                            <div class="col-sm-12">
-                                                <md-button
-                                                        ng-click="mainCtrl.updateProfile()"
-                                                        class="md-raised c-white bgm-blue m-l-0">
-                                                    Save
-                                                </md-button>
-                                                <md-button
-                                                        ng-click="$state.go('base.home')"
-                                                        class="md-raised">
-                                                    Done
-                                                </md-button>
-                                            </div>
-
-                                        </div>
-                                    </div>
-
-                                </form>
-                            </div>
+                        <div data-ng-include="'module/main/user-profile-settings.html'">
 
                         </div>
-
                     </div>
                 </div>
             </div>
