--- a/app/dev/module/notes/notes.html
+++ b/app/dev/module/notes/notes.html
@@ -74,7 +74,7 @@
                             </a>
                         </td>
                         <td class="hidden-xs" md-cell>
-                            <span ng-if="!note.sermon">{{note.church}}</span>
+                            <span ng-if="!note.sermon">{{note.church.name}}</span>
                             <a href ng-if="note.sermon">
                                 <span>{{note.sermon.church.name}}</span>
                             </a>
