--- a/app/dev/module/notes/create.html
+++ b/app/dev/module/notes/create.html
@@ -86,10 +86,31 @@
                         </div>
                     </div>
 
+                    <div class="form-group  m-b-30">
+                        <div class="fg-line">
+                            <label class="fg-label">Main Scripture(s)</label>
+                            <md-chips
+                                    ng-model="notesCtrl.note.scriptures"
+                                    chip-show-modal-on-click
+                                    md-transform-chip="notesCtrl.onScriptureAdd($chip)"
+                                    placeholder="Enter a scripture"
+                                    secondary-placeholder="e.g John 3:16">
+                            </md-chips>
+                            <small style="color:#9e9e9e; float: right" class="help-block">
+                                Type a
+                                scripture
+                                then press enter.
+                            </small>
+
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
+                    <div>
                       <span class="text-left f-10 m-r-20"
                             ng-if="notesCtrl.note.modified_at"
                             style="height: 20px">
@@ -99,21 +120,21 @@
                           style="height: 20px">
                         <span ng-show="notesCtrl.note.saving">Saving...</span>
                     </span>
+                    </div>
                     <div>
                         <a href ng-click="notesCtrl.expandNote=true"
                            ng-show="!notesCtrl.expandNote"
                         >
                             <md-icon class="pull-right" md-svg-src="/img/icons/arrow_upward_black.svg">
-                            <md-tooltip>
-                                Expand note view
-                            </md-tooltip>
+                                <md-tooltip class="hidden-xs" md-direction="top">
+                                    Expand note
+                                </md-tooltip>
                             </md-icon>
                         </a>
-                         <a href ng-click="notesCtrl.expandNote=false"  ng-show="notesCtrl.expandNote">
+                        <a href ng-click="notesCtrl.expandNote=false" ng-show="notesCtrl.expandNote">
                             <md-icon class="pull-right" md-svg-src="/img/icons/arrow_downward_black.svg">
-                            <md-tooltip>
-                                Collapse note view
-                            </md-tooltip>
+                                <md-tooltip  class="hidden-xs" md-direction="top">
+                                </md-tooltip>
                             </md-icon>
                         </a>
                     </div>
